<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="default_load_text">加载中 ···</string>
    <string name="login_account">帐号:</string>
    <string name="login_password">密码:</string>
    <string name="re_login_password">重复输入密码:</string>
    <string name="reg_nickname">名字:</string>
    <string name="reg_email">电子邮箱:</string>
    <string name="remember_password">记住密码</string>
    <string name="button_ok">确定</string>
    <string name="button_reg">注册</string>
    <string name="button_cancel">取消</string>
    <string name="app_name">博乐</string>
    <string name="add_account">注册帐号</string>
    <string name="reg_account">注册帐号</string>
    <string name="refresh">刷新</string>
    <string name="header_login">登陆</string>
    <string name="user_account">帐号</string>
    <string name="user_password">密码</string>
</resources>
