<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:background="@drawable/bg"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
	    <Button
			android:layout_width="80dip" 
		    android:layout_height="wrap_content" 
		    android:text="@string/button_cancel"
		    android:id="@+id/cancel_button"
		    android:layout_alignParentLeft ="true"/>
		<TextView
			android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/reg_account"
		    android:id="@+id/reg_Account_text"
		    android:layout_marginLeft="100dip"
		    android:layout_centerInParent="true"/>
		/>
		<Button
			android:layout_width="80dip" 
		    android:layout_height="wrap_content" 
		    android:text="@string/button_reg"
		    android:id="@+id/reg_button"
		    android:layout_alignParentRight ="true"/>
	</RelativeLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dip"
	    android:layout_marginRight="10dip"
	    android:scrollbarSize="2dip"
	    >
	<ImageView android:id="@+id/logo"
		android:layout_gravity="left"
		android:src="@drawable/logo"
		android:layout_width="100dip"
		android:layout_height="wrap_content"/>
    <TextView
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/login_account"
	    android:id="@+id/login_account"
	    android:layout_gravity="left"
	    android:layout_marginTop="20dip"/>
	<EditText
		android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:id="@+id/login_account_input"
	    android:layout_marginTop="5dip"/>
	<TextView
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/reg_email"
	    android:id="@+id/reg_email"
	    android:layout_gravity="left"
	    android:layout_marginTop="20dip"/>
	<EditText
		android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:id="@+id/reg_email_input"
	    android:layout_marginTop="5dip"/>
	<TextView
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/reg_nickname"
	    android:id="@+id/reg_nickname"
	    android:layout_gravity="left"
	    android:layout_marginTop="20dip"/>
	<EditText
		android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:id="@+id/reg_nickname_input"
	    android:layout_marginTop="5dip"/>
	<TextView
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/login_password"
	    android:id="@+id/login_password"
	    android:layout_gravity="left"
	    android:layout_marginTop="20dip"/>
	<EditText
		android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:id="@+id/login_password_input"
	    android:layout_marginTop="5dip"/>
	<TextView
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/re_login_password"
	    android:id="@+id/login_password"
	    android:layout_gravity="left"
	    android:layout_marginTop="20dip"/>
	<EditText
		android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:id="@+id/re_login_password_input"
	    android:layout_marginTop="5dip"/>
	<Button
		android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/button_ok"
	    android:id="@+id/login_button"
	    android:layout_gravity="left"
	    android:layout_marginTop="20dip"/>
	</LinearLayout>
</LinearLayout>
