<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:background="@drawable/bg"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
	    <Button
			android:layout_width="80dip" 
		    android:layout_height="wrap_content" 
		    android:text="@string/button_cancel"
		    android:id="@+id/cancel_button"
		    android:layout_alignParentLeft ="true"/>
		<TextView
			android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/add_account"
		    android:id="@+id/addAccount_text"
		    android:layout_marginLeft="100dip"
		    android:layout_centerInParent="true"/>
		/>
		<Button
			android:layout_width="80dip" 
		    android:layout_height="wrap_content" 
		    android:text="@string/button_reg"
		    android:id="@+id/reg_button"
		    android:layout_alignParentRight ="true"/>
	</RelativeLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dip"
	    android:layout_marginRight="10dip"
	    >
	<TextView android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:id="@+id/notice_text"
	    android:text="This is index page"
	    android:layout_gravity="left"
	    android:layout_marginTop="10dip"/>
	</LinearLayout>
</LinearLayout>
