<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:background="@drawable/bg"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
	    <Button
			android:layout_width="80dip" 
		    android:layout_height="wrap_content" 
		    android:text="@string/button_cancel"
		    android:id="@+id/cancel_button"
		    android:layout_alignParentLeft ="true"/>
		<TextView
			android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/reg_account"
		    android:id="@+id/reg_Account_text"
		    android:layout_marginLeft="100dip"
		    android:layout_centerInParent="true"/>
		/>
		<Button
			android:layout_width="80dip" 
		    android:layout_height="wrap_content" 
		    android:text="@string/button_reg"
		    android:id="@+id/reg_button"
		    android:layout_alignParentRight ="true"/>
	</RelativeLayout>
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dip"
		    android:layout_marginRight="10dip"
		    android:scrollbarSize="2dip"
		    >
			<ImageView android:id="@+id/logo"
				android:layout_gravity="left"
				android:src="@drawable/logo"
				android:layout_width="100dip"
				android:layout_height="30dip"/>
		    <TextView
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="微博帐号"
			    android:layout_gravity="left"
			    android:layout_marginTop="20dip"/>
			<EditText
				android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:id="@+id/login_account_input"
			    android:layout_marginTop="5dip"/>
			<TextView
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="登录密码"
			    android:layout_gravity="left"
			    android:layout_marginTop="20dip"/>
			<EditText
				android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:id="@+id/login_password_input"
			    android:password="true"
			    android:layout_marginTop="5dip"/>
			<TextView android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:id="@+id/notice_text"
			    android:visibility="gone"
			    android:layout_gravity="left"
			    android:layout_marginTop="10dip"/>
			<Button
				android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="验证"
			    android:id="@+id/login_button"
			    android:layout_gravity="left"
			    android:layout_marginTop="20dip"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
